--- a/src/pages/home/HomeOverlay.css
+++ b/src/pages/home/HomeOverlay.css
@@ -76,6 +76,10 @@
   width: 40%;
 }
 
+.venue-link {
+  color: rgb(255, 255, 255);
+}
+
 @media screen and (min-width: 600px) {
   #shapes-container {
     top: 140px;
