--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -60,10 +60,11 @@
 }
 
 #self-image {
-  border-radius: 350px;
-  border: 2px solid rgb(19, 30, 90);
+  border-radius: 50%;
+  border: 2px solid rgb(9, 17, 61);
   width: 80%;
   margin: 20px;
+  /* box-shadow: 0 8px 16px 0 rgba(124, 67, 1, 0.7); */
 }
 
 #home-main-box #dates h3 {
